--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@googlemaps/js-api-loader": "^1.12.12",
     "fast-equals": "^2.0.4",
+    "insane": "^2.6.2",
     "next": "12.0.7",
     "pexels": "^1.3.0",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.45.1"
+    "sass": "^1.45.1",
+    "snarkdown": "^2.0.0"
   },
   "devDependencies": {
     "@types/google-maps": "^3.2.3",
