--- a/package.json
+++ b/package.json
@@ -18,20 +18,25 @@
     "insane": "^2.6.2",
     "next": "12.0.7",
     "pexels": "^1.3.0",
+    "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-slick": "^0.28.1",
     "sass": "^1.45.1",
+    "slugify": "^1.6.5",
     "snarkdown": "^2.0.0"
   },
   "devDependencies": {
     "@types/google-maps": "^3.2.3",
     "@types/node": "17.0.5",
+    "@types/qs": "^6.9.7",
     "@types/react": "17.0.38",
+    "@types/react-slick": "^0.23.8",
     "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7",
+    "tailwindcss": "^3.0.16",
     "typescript": "4.5.4"
   }
 }
