--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@googlemaps/js-api-loader": "^1.12.12",
+    "@splidejs/react-splide": "^0.6.19",
     "fast-equals": "^2.0.4",
     "insane": "^2.6.2",
     "next": "12.0.7",
@@ -21,7 +22,6 @@
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
-    "react-slick": "^0.28.1",
     "sass": "^1.45.1",
     "slugify": "^1.6.5",
     "snarkdown": "^2.0.0"
