--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "node ./scripts/sitemap-generator.mjs",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,10 +19,12 @@
     "fast-equals": "^2.0.4",
     "insane": "^2.6.2",
     "next": "12.0.7",
+    "node-fetch": "^3.2.0",
     "pexels": "^1.3.0",
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-gtm-module": "^2.0.11",
     "sass": "^1.45.1",
     "slugify": "^1.6.5",
     "snarkdown": "^2.0.0"
@@ -31,11 +34,15 @@
     "@types/node": "17.0.5",
     "@types/qs": "^6.9.7",
     "@types/react": "17.0.38",
+    "@types/react-gtm-module": "^2.0.1",
     "@types/react-slick": "^0.23.8",
     "autoprefixer": "^10.4.0",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "fs": "^0.0.1-security",
+    "globby": "^13.1.0",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.0.16",
     "typescript": "4.5.4"
   }
