--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "fast-equals": "^2.0.4",
     "insane": "^2.6.2",
     "next": "12.0.7",
-    "node-fetch": "^3.2.0",
     "pexels": "^1.3.0",
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-gtm-module": "^2.0.11",
     "sass": "^1.45.1",
+    "sitemap": "^7.1.0",
     "slugify": "^1.6.5",
     "snarkdown": "^2.0.0"
   },
