--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "@googlemaps/js-api-loader": "^1.12.12",
     "@splidejs/react-splide": "^0.6.19",
     "fast-equals": "^2.0.4",
     "insane": "^2.6.2",
-    "next": "12.0.7",
+    "next": "^12.1.0",
     "qs": "^6.10.3",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
